<resources>
    <string name="app_name">Games \'n Stuff</string>

    <string name="suspect0">Col. Mustard</string>
    <string name="suspect1">Prof. Plum</string>
    <string name="suspect2">Mr. Green</string>
    <string name="suspect3">Mrs. Peacock</string>
    <string name="suspect4">Miss Scarlet</string>
    <string name="suspect5">Mrs. White</string>

    <string name="title_activity_main">Main Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_clue">Clue</string>
    <string name="title_activity_scorecard">Scorecard</string>
    <string name="title_activity_scorecard_setup">ScorecardSetupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
