<?xml version="1.0" encoding="utf-8"?>
<com.jmedeisis.draglinearlayout.DragLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/container">

    <LinearLayout
        android:id="@+id/layout_p0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/handle_p0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drag_handle"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/player_p0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suspect0"
                android:backgroundTint="@color/color0"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_p1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/handle_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drag_handle"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/player_p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suspect1"
                android:backgroundTint="@color/color1"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_p2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/handle_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drag_handle"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/player_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suspect2"
                android:backgroundTint="@color/color2"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_p3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/handle_p3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drag_handle"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/player_p3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suspect3"
                android:backgroundTint="@color/color3"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_p4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/handle_p4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drag_handle"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/player_p4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suspect4"
                android:backgroundTint="@color/color4"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_p5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/handle_p5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drag_handle"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/player_p5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suspect5"
                android:backgroundTint="@color/color5"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>



</com.jmedeisis.draglinearlayout.DragLinearLayout>
